--- a/src/components/Game/Game.module.css
+++ b/src/components/Game/Game.module.css
@@ -3,7 +3,7 @@
     background-color: rgb(223, 131, 26);
     max-width: 300px;
     max-height: 550px;
-    margin: 0 auto;
+    margin: 150px auto;
     padding: 5px 0px;
     -webkit-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
     -moz-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
