--- a/src/components/Result/Result.module.css
+++ b/src/components/Result/Result.module.css
@@ -1,11 +1,35 @@
 .result {
+    box-sizing: border-box;
+    background-color: rgb(223, 131, 26);
+    max-width: 300px;
+    max-height: 550px;
+    margin: 150px auto;
+    padding: 5px 0px;
+    -webkit-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
+    -moz-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
+    box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
+}
 
+.result img {
+    max-width: 200px;
+    max-height: 100px;
 }
 
 .title {
 
 }
 
-.button {
-    
+.tryAgainButton {
+    font-size: 18px;
+    font-weight: 400;
+    background-color:rgb(141, 29, 29);
+    width: 100px;
+    height: 35px;
+    border: 0;
+}
+
+.tryAgainButton:hover {
+    -webkit-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
+    -moz-box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
+    box-shadow: -1px 0px 13px 0px rgba(48,17,3,1);
 }
